// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentAccessTable does not render table at all if there aren't any permissions for a custom policy 1`] = `<DocumentFragment />`;

exports[`AgentAccessTable renders a list of permissions 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-root PodBrowser-root PodBrowser-accordion PodBrowser-expanded PodBrowser-rounded PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
    data-testid="agent-access-table"
  >
    <div
      class="PodBrowser-headerContainer"
    >
      <i
        class="PodBrowser-icon-editor PodBrowser-icon PodBrowser-iconEditor"
      />
      <div
        class="PodBrowser-textContainer"
      >
        <div
          class="PodBrowser-titleAndButtonContainer"
        >
          <p
            class="PodBrowser-title"
          >
            Editors
          </p>
          <button
            class="PodBrowser-button PodBrowser-button--text"
            data-testid="add-agent-button"
          >
            <span
              class="PodBrowser-icon-add PodBrowser-button__icon PodBrowser-button__icon--before"
            />
            <span
              class="PodBrowser-button__text"
            >
              Edit Editors
            </span>
          </button>
          <button
            class="PodBrowser-button PodBrowser-button--icon-only PodBrowser-action-button"
          >
            <span
              class="PodBrowser-button__text"
            >
              <span
                aria-label="Show menu for policy"
                class="PodBrowser-icon-more"
              />
            </span>
          </button>
        </div>
        <span
          class="PodBrowser-description"
        >
          <p>
            <b>
              Can 
            </b>
            view, edit and delete this resource
          </p>
        </span>
      </div>
    </div>
    <div
      class="PodBrowser-container PodBrowser-entered"
      style="min-height: 0px;"
    >
      <div
        class="PodBrowser-wrapper"
      >
        <div
          class="PodBrowser-wrapperInner"
        >
          <div
            role="region"
          >
            <div
              class="PodBrowser-permissionsContainer"
            >
              <div
                class="PodBrowser-tabsContainer"
                data-testid="agent-table-tabs"
              >
                <div
                  class="PodBrowser-root"
                >
                  <div
                    class="PodBrowser-scroller PodBrowser-fixed"
                    style="overflow: hidden;"
                  >
                    <div
                      aria-label="Permissions Filter tabs"
                      class="PodBrowser-flexContainer"
                      role="tablist"
                    >
                      <button
                        aria-selected="true"
                        class="PodBrowser-root PodBrowser-root PodBrowser-tab PodBrowser-textColorInherit PodBrowser-selected PodBrowser-selected"
                        data-testid="agent-table-tabs-all"
                        role="tab"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="PodBrowser-wrapper"
                        >
                          All
                        </span>
                        <span
                          class="PodBrowser-root"
                        />
                      </button>
                      <button
                        aria-selected="false"
                        class="PodBrowser-root PodBrowser-root PodBrowser-tab PodBrowser-textColorInherit"
                        data-testid="agent-table-tabs-people"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="PodBrowser-wrapper"
                        >
                          People
                        </span>
                        <span
                          class="PodBrowser-root"
                        />
                      </button>
                      <button
                        aria-selected="false"
                        class="PodBrowser-root PodBrowser-root PodBrowser-tab PodBrowser-textColorInherit"
                        data-testid="agent-table-tabs-groups"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="PodBrowser-wrapper"
                        >
                          Groups
                        </span>
                        <span
                          class="PodBrowser-root"
                        />
                      </button>
                    </div>
                    <span
                      class="PodBrowser-root PodBrowser-colorSecondary PodBrowser-indicator PodBrowser-indicator"
                      style="left: 0px; width: 0px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="PodBrowser-searchBoxContainer PodBrowser-searchBoxContainer--can-be-hidden"
              >
                <button
                  aria-label="search"
                  class="PodBrowser-root PodBrowser-root"
                  tabindex="0"
                  type="submit"
                >
                  <span
                    class="PodBrowser-label"
                  >
                    <i
                      aria-label="search"
                      class="PodBrowser-icon-search PodBrowser-iconSearch"
                    />
                  </span>
                  <span
                    class="PodBrowser-root"
                  />
                </button>
                <div
                  class="PodBrowser-root PodBrowser-searchInput"
                >
                  <input
                    aria-label="Search by name or WebId"
                    class="PodBrowser-input"
                    data-testid="search-input"
                    placeholder="Search by name or WebId"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <table
                class="PodBrowser-table PodBrowser-agents-table"
                role="table"
              >
                <tbody
                  class="PodBrowser-table__body"
                  role="rowgroup"
                >
                  <tr
                    class="PodBrowser-table__body-row"
                  >
                    <td
                      class="PodBrowser-table__body-cell PodBrowser-agent-cell"
                    >
                      <div
                        class="PodBrowser-loadingStateContainer"
                      >
                        <span
                          class="PodBrowser-root PodBrowser-circle PodBrowser-pulse"
                          style="width: 40px; height: 40px;"
                        />
                        <div>
                          <span
                            class="PodBrowser-root PodBrowser-text PodBrowser-pulse"
                            style="width: 100px;"
                          />
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AgentAccessTable renders an empty list of permissions if permissions are unavailable 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-root PodBrowser-root PodBrowser-accordion PodBrowser-expanded PodBrowser-rounded PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
    data-testid="agent-access-table"
  >
    <div
      class="PodBrowser-headerContainer"
    >
      <i
        class="PodBrowser-icon-editor PodBrowser-icon PodBrowser-iconEditor"
      />
      <div
        class="PodBrowser-textContainer"
      >
        <div
          class="PodBrowser-titleAndButtonContainer"
        >
          <p
            class="PodBrowser-title"
          >
            Editors
          </p>
          <button
            class="PodBrowser-button PodBrowser-button--text"
            data-testid="add-agent-button"
          >
            <span
              class="PodBrowser-icon-add PodBrowser-button__icon PodBrowser-button__icon--before"
            />
            <span
              class="PodBrowser-button__text"
            >
              Edit Editors
            </span>
          </button>
          <button
            class="PodBrowser-button PodBrowser-button--icon-only PodBrowser-action-button"
          >
            <span
              class="PodBrowser-button__text"
            >
              <span
                aria-label="Show menu for policy"
                class="PodBrowser-icon-more"
              />
            </span>
          </button>
        </div>
        <span
          class="PodBrowser-description"
        >
          <p>
            <b>
              Can 
            </b>
            view, edit and delete this resource
          </p>
        </span>
      </div>
    </div>
    <div
      class="PodBrowser-container PodBrowser-entered"
      style="min-height: 0px;"
    >
      <div
        class="PodBrowser-wrapper"
      >
        <div
          class="PodBrowser-wrapperInner"
        >
          <div
            role="region"
          >
            <div
              class="PodBrowser-permissionsContainer"
            >
              <span
                class="PodBrowser-emptyStateTextContainer"
              >
                <p>
                  No editors
                </p>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AgentAccessTable renders an empty list of permissions if there are no permissions and the policy is not custom 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-root PodBrowser-root PodBrowser-accordion PodBrowser-expanded PodBrowser-rounded PodBrowser-rounded PodBrowser-elevation1 PodBrowser-rounded"
    data-testid="agent-access-table"
  >
    <div
      class="PodBrowser-headerContainer"
    >
      <i
        class="PodBrowser-icon-editor PodBrowser-icon PodBrowser-iconEditor"
      />
      <div
        class="PodBrowser-textContainer"
      >
        <div
          class="PodBrowser-titleAndButtonContainer"
        >
          <p
            class="PodBrowser-title"
          >
            Editors
          </p>
          <button
            class="PodBrowser-button PodBrowser-button--text"
            data-testid="add-agent-button"
          >
            <span
              class="PodBrowser-icon-add PodBrowser-button__icon PodBrowser-button__icon--before"
            />
            <span
              class="PodBrowser-button__text"
            >
              Edit Editors
            </span>
          </button>
          <button
            class="PodBrowser-button PodBrowser-button--icon-only PodBrowser-action-button"
          >
            <span
              class="PodBrowser-button__text"
            >
              <span
                aria-label="Show menu for policy"
                class="PodBrowser-icon-more"
              />
            </span>
          </button>
        </div>
        <span
          class="PodBrowser-description"
        >
          <p>
            <b>
              Can 
            </b>
            view, edit and delete this resource
          </p>
        </span>
      </div>
    </div>
    <div
      class="PodBrowser-container PodBrowser-entered"
      style="min-height: 0px;"
    >
      <div
        class="PodBrowser-wrapper"
      >
        <div
          class="PodBrowser-wrapperInner"
        >
          <div
            role="region"
          >
            <div
              class="PodBrowser-permissionsContainer"
            >
              <span
                class="PodBrowser-emptyStateTextContainer"
              >
                <p>
                  No editors
                </p>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
